<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.SMOHelper">

    <Button
        android:id="@+id/DefaultSMO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="48dp"
        android:text="@string/default1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/NextSMO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="50dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewSMO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/NextSMO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/SMO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/batchsize_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/batch_size"
                android:inputType="text" />

            <EditText
                android:id="@+id/C_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/c"
                android:inputType="text" />

            <EditText
                android:id="@+id/epsilon_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/epsilon"
                android:inputType="text" />

            <EditText
                android:id="@+id/kernel_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/kernel"
                android:inputType="text" />

            <EditText
                android:id="@+id/filtertype_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/filtertype"
                android:inputType="text" />

            <EditText
                android:id="@+id/numdecimalplaces_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/numdecimalplaces"
                android:inputType="text" />

            <EditText
                android:id="@+id/numfolds_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/numfolds"
                android:inputType="text" />

            <EditText
                android:id="@+id/randomseed_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/randomseed"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/toleranceparameter_svm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/toleranceparameter"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
