<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">


    <ScrollView
        android:id="@+id/scrollViewRF"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/DefaultRF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/RF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/bagsizepercent_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/bagsizepercent" />

            <EditText
                android:id="@+id/batchsize_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/batch_size" />

            <EditText
                android:id="@+id/maxdepth_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/maxdepth" />

            <EditText
                android:id="@+id/numdecimalplaces_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/numdecimalplaces" />

            <EditText
                android:id="@+id/numexecutionslots_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/numexecutionslots" />

            <EditText
                android:id="@+id/numfeatures_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/numfeatures" />

            <EditText
                android:id="@+id/numiterations_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/numiterations" />

            <EditText
                android:id="@+id/seed_rf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/seed" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/DefaultRF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="35dp"
        android:text="@string/default1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/NextRF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="33dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>